added team info, added services content

--- a/app/services.html
+++ b/app/services.html
@@ -83,99 +83,167 @@
         <!-- End header -->
 
         <section class="services-blocks">
-            <div class="clearfix block-design">
-                <div class="column full v-align">
-                    <div class="title-and-text v-aligned">
-                        <h2>Design</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magnam, pariatur. Aliquam, ad, repudiandae, est nisi quam nesciunt excepturi laboriosam neque iusto saepe qui eos recusandae ullam inventore quo quisquam!
-                        </p>
-                        <ul>
-                            <li>Branding</li>
-                            <li>Web Design</li>
-                            <li>Advertisements</li>
-                            <li>Print</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="clearfix block-marketing">
-                <div class="column full v-align">
-                    <div class="title-and-text v-aligned">
-                        <h2>Marketing</h2>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, doloribus, distinctio, dicta, eveniet reiciendis et cupiditate doloremque id suscipit aliquid eligendi earum repudiandae! Delectus libero enim tempora perferendis consequuntur repellat.
-                        </p>
-                        <ul>
-                            <li>
-                                Online:
-                                <ul>
-                                    <li>Facebook</li>
-                                    <li>Twitter</li>
-                                    <li>Google Plus</li>
-                                    <li>Something Else</li>
-                                </ul>
-                            </li>
-                            <li>
-                                Offline:
-                                <ul>
-                                    <li>Something</li>
-                                    <li>Something Else</li>
-                                    <li>Another Thing</li>
-                                    <li>Yet Another Thing</li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
             <div class="clearfix block-training">
                 <div class="column full v-align">
                     <div class="title-and-text v-aligned">
-                        <h2>Training</h2>
+                        <h2 data-center-top="margin-left:0" data-bottom="margin-left:-100%">Learn</h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, cumque, tempore, saepe, perspiciatis accusamus facere ea est labore quos doloremque officiis dolore nostrum consectetur culpa quasi possimus distinctio perferendis porro.
+                            Get yourself working at your highest capacity through continued development and training. We provide online and class based courses in design, marketing, analysis, cloud computing and new technologies.
                         </p>
-                        <ul>
-                            <li>Social Media</li>
-                            <li>Design</li>
-                            <li>Photography</li>
-                            <li>Cloud Computing</li>
-                        </ul>
+                        <div class="column third">
+                            <ul>
+                                <li>Cloud Computing</li>
+                                <li>Graphic Design</li>
+                                <li>Digital Photography</li>
+                            </ul>
+                        </div>
+                        <div class="column third">
+                            <ul>
+                                <li>Content Management Systems</li>
+                                <li>Community Management</li>
+                                <li>Web &amp; Social Analytics</li>
+                            </ul>
+                        </div>
+                        <div class="column third">
+                            <ul>
+                                <li>Mobile Applications</li>
+                                <li>Podcast Production</li>
+                                <li>Online Advertising</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="clearfix block-analysis">
+            <div class="clearfix block-design">
                 <div class="column full v-align">
                     <div class="title-and-text v-aligned">
-                        <h2>Analysis</h2>
+                        <h2 data-center-top="margin-left:0" data-bottom="margin-left:-100%">Design</h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, laudantium, quidem eius assumenda aliquam autem beatae sit culpa veniam ab illo ad veritatis modi aspernatur reiciendis quibusdam quia tenetur omnis.
+                            Our first impression of something defines what we think about it. Let our multidisciplinary team create the visual answers to your idea and challenges.
                         </p>
-                        <ul>
-                            <li>Social</li>
-                            <li>Google Analytics</li>
-                            <li>Business Reviews</li>
-                        </ul>
+                        <div class="column third">
+                            <ul>
+                                <li>Company Branding</li>
+                                <li>Website Design</li>
+                                <li>Mobile Applications</li>
+                            </ul>
+                        </div>
+                        <div class="column third">
+                            <ul>
+                                <li>Print Media</li>
+                                <li>Advertising</li>
+                                <li>User Interfaces</li>
+                            </ul>
+                        </div>
+                        <div class="column third">
+                            <ul>
+                                <li>Video &amp; Photography</li>
+                                <li>Visual Presentations</li>
+                                <li>Social Applications</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="clearfix block-consulting">
                 <div class="column full v-align">
                     <div class="title-and-text v-aligned">
-                        <h2>Consulting</h2>
+                        <h2 data-center-top="margin-left:0" data-bottom="margin-left:-100%">Consulting</h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque a dignissimos ratione officia debitis dolorem quibusdam quod ex! Cum, illo rerum facere ratione dignissimos velit ut odit facilis doloribus dolore!
+                            Helping you see yourself from the outside and advising you on how you can become the way you want.
                         </p>
-                        <ul>
-                            <li>Thing</li>
-                            <li>Something Else</li>
-                            <li>Another Thing</li>
-                        </ul>
+                        <div class="column third">
+                            <ul>
+                                <li>Brand Management</li>
+                                <li>Data-driven Marketing</li>
+                            </ul>
+                        </div>
+                        <div class="column third">
+                            <ul>
+                                <li>Team Strategy</li>
+                                <li>Leadership Development</li>
+                            </ul>
+                        </div>
+                        <div class="column third">
+                            <ul>
+                                <li>Web Strategy</li>
+                                <li>User-end Technology</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="clearfix block-marketing">
+                <div class="column full v-align">
+                    <div class="title-and-text v-aligned">
+                        <h2 data-center-top="margin-left:0" data-bottom="margin-left:-100%">Marketing</h2>
+                        <p>
+                            Our forte is helping others better understand the needs of their customers and the techniques that will enable them to reach out and grab their attention. 
+                        </p>
+                        <div class="column third">
+                            <ul>
+                                <li>Social Media</li>
+                                <li>Email Campaigns</li>
+                            </ul>
+                        </div>
+                        <div class="column third">
+                            <ul>
+                                <li>Print Media</li>
+                                <li>SMS Marketing</li>
+                            </ul>
+                        </div>
+                        <div class="column third">
+                            <ul>
+                                <li>Ad Placement</li>
+                                <li>Broadcast Media</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="clearfix block-analysis">
+                <div class="column full v-align">
+                    <div class="title-and-text v-aligned">
+                        <h2 data-center-top="margin-left:0" data-bottom="margin-left:-100%">Analysis</h2>
+                        <p>
+                            Understanding how to make sense of all your online &amp; offline marketing efforts is about compiling the data and reporting on what it means and what to do next.
+                        </p>
+                        <div class="column third">
+                            <ul>
+                                <li>Search Engine Optimisation</li>
+                                <li>Competitor Monitoring</li>
+                            </ul>
+                        </div>
+                        <div class="column third">
+                            <ul>
+                                <li>Social Analytics</li>
+                                <li>New Technologies</li>
+                            </ul>
+                        </div>
+                        <div class="column third">
+                            <ul>
+                                <li>Web Analytics</li>
+                                <li>Crowdsourcing</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
+        <div class="clearfix block-contact">
+            <div class="column full text-center v-align">
+                <div class="text-and-button v-aligned">
+                    <p>
+                        Want to work with us?
+                    </p>
+                    <a href="connect.html">
+                        <button>
+                            GET IN TOUCH
+                        </button>
+                    </a>
+                </div>
+            </div>
+        </div>
 		
 
 		<!-- build:js scripts/vendor.js -->
