added team photos, added content to connect page

--- a/app/about.html
+++ b/app/about.html
@@ -37,13 +37,13 @@
                         <a href="about.html">ABOUT</a>
                     </li>
                     <li>
-                        <a href="#">SERVICES</a>
+                        <a href="services.html">SERVICES</a>
                     </li>
                     <li>
                         <a href="showcase.html">SHOWCASE</a>
                     </li>
                     <li>
-                        <a href="#">CONNECT</a>
+                        <a href="connect.html">CONNECT</a>
                     </li>
                     <li>
                         <a href="/blog">BLOG</a>
@@ -147,7 +147,7 @@
                 <div class="column full text-center v-align">
                     <div class="v-aligned">
                         <h2>
-                            Our vision
+                            Our values
                         </h2>
                         <p>
                             - something here -
@@ -164,10 +164,15 @@
                 <div class="column full">
                     <p>
                         <ul>
+                            <h4>Support</h4>
                             <li>Our team is like a clock, where each cog is as vital as the next to keep things running in synchronisation.</li>
+                            <h4>Facilitation</h4>
                             <li>Our goal and our priority is in helping assist others on their journey, we want to help you get there!</li>
+                            <h4>Sharing</h4>
                             <li>Everyone benefits when we scratch each other's backs, whether you pay it forward or keep a watchful eye on those in need.</li>
+                            <h4>Diversity</h4>
                             <li>Our experience has taught us that things are not always so black and white, but varying shades of grey and red and orange and blue.</li>
+                            <h4>Vision</h4>
                             <li>Inherently we believe in helping others to discover their passion, understand their mission and get clear on their goals.</li>
                         </ul>
                     </p>
@@ -201,8 +206,8 @@
                         <div class="team-members text-center">
                             <!-- Team member -->
                             <div class="team-member">
-                                <a href="javascript:void(0)">
-                                    <img src="http://lorempixel.com/200/200/people/" alt="">
+                                <a class="image" href="javascript:void(0)">
+                                    <div class="team-member-image sam-lyons"></div>
                                     <div class="team-member-overlay">
                                         <p>Sam Lyons</p>
                                         <p>Founder/Creative Director</p>
@@ -212,7 +217,7 @@
                                 <div class="lightbox">
                                     <div class="clearfix">
                                         <div class="column third">
-                                            <img src="http://lorempixel.com/200/200/people/" alt="">
+                                            <div class="team-member-image sam-lyons"></div>
                                         </div>
                                         <div class="column two-thirds">
                                             <h3>
@@ -250,7 +255,7 @@
                             <!-- Team member -->
                             <div class="team-member">
                                 <a href="javascript:void(0)">
-                                    <img src="http://lorempixel.com/200/200/people/" alt="">
+                                    <div class="team-member-image marie-therese"></div>
                                     <div class="team-member-overlay">
                                         <p>Marie Therese</p>
                                         <p>Project Manager/Content Editor</p>
@@ -260,7 +265,7 @@
                                 <div class="lightbox">
                                     <div class="clearfix">
                                         <div class="column third">
-                                            <img src="http://lorempixel.com/200/200/people/" alt="">
+                                            <div class="team-member-image marie-therese"></div>
                                         </div>
                                         <div class="column two-thirds">
                                             <h3>
@@ -298,7 +303,7 @@
                             <!-- Team member -->
                             <div class="team-member">
                                 <a href="javascript:void(0)">
-                                    <img src="http://lorempixel.com/200/200/people/" alt="">
+                                    <div class="team-member-image artur-leitis"></div>
                                     <div class="team-member-overlay">
                                         <p>Artur Leitis</p>
                                         <p>Programmer/Developer</p>
@@ -308,7 +313,7 @@
                                 <div class="lightbox">
                                     <div class="clearfix">
                                         <div class="column third">
-                                            <img src="http://lorempixel.com/200/200/people/" alt="">
+                                            <div class="team-member-image artur-leitis"></div>
                                         </div>
                                         <div class="column two-thirds">
                                             <h3>
@@ -346,7 +351,7 @@
                             <!-- Team member -->
                             <div class="team-member">
                                 <a href="javascript:void(0)">
-                                    <img src="http://lorempixel.com/200/200/people/" alt="">
+                                    <div class="team-member-image philip-corbally"></div>
                                     <div class="team-member-overlay">
                                         <p>Philip Corbally</p>
                                         <p>Developer</p>
@@ -356,7 +361,7 @@
                                 <div class="lightbox">
                                     <div class="clearfix">
                                         <div class="column third">
-                                            <img src="http://lorempixel.com/200/200/people/" alt="">
+                                            <div class="team-member-image philip-corbally"></div>
                                         </div>
                                         <div class="column two-thirds">
                                             <h3>
@@ -410,7 +415,7 @@
                             <!-- Team member -->
                             <div class="team-member">
                                 <a href="javascript:void(0)">
-                                    <img src="http://lorempixel.com/200/200/people/" alt="">
+                                    <div class="team-member-image andre-lacerda"></div>
                                     <div class="team-member-overlay">
                                         <p>André Lacerda</p>
                                         <p>Motion Graphics/Video</p>
@@ -420,7 +425,7 @@
                                 <div class="lightbox">
                                     <div class="clearfix">
                                         <div class="column third">
-                                            <img src="http://lorempixel.com/200/200/people/" alt="">
+                                            <div class="team-member-image andre-lacerda"></div>
                                         </div>
                                         <div class="column two-thirds">
                                             <h3>
@@ -458,7 +463,7 @@
                             <!-- Team member -->
                             <div class="team-member">
                                 <a href="javascript:void(0)">
-                                    <img src="http://lorempixel.com/200/200/people/" alt="">
+                                    <div class="team-member-image robert-kamenicky"></div>
                                     <div class="team-member-overlay">
                                         <p>Robert Kamenicky</p>
                                         <p>Web Developer/Designer</p>
@@ -468,7 +473,7 @@
                                 <div class="lightbox">
                                     <div class="clearfix">
                                         <div class="column third">
-                                            <img src="http://lorempixel.com/200/200/people/" alt="">
+                                            <div class="team-member-image robert-kamenicky"></div>
                                         </div>
                                         <div class="column two-thirds">
                                             <h3>
@@ -506,7 +511,7 @@
                             <!-- Team member -->
                             <div class="team-member">
                                 <a href="javascript:void(0)">
-                                    <img src="http://lorempixel.com/200/200/people/" alt="">
+                                    <div class="team-member-image aidan-mccarthy"></div>
                                     <div class="team-member-overlay">
                                         <p>Aidan McCarthy</p>
                                         <p>Broadcast Video Editor</p>
@@ -516,7 +521,7 @@
                                 <div class="lightbox">
                                     <div class="clearfix">
                                         <div class="column third">
-                                            <img src="http://lorempixel.com/200/200/people/" alt="">
+                                            <div class="team-member-image aidan-mccarthy"></div>
                                         </div>
                                         <div class="column two-thirds">
                                             <h3>
@@ -554,7 +559,7 @@
                             <!-- Team member -->
                             <div class="team-member">
                                 <a href="javascript:void(0)">
-                                    <img src="http://lorempixel.com/200/200/people/" alt="">
+                                    <div class="team-member-image carol-hevia"></div>
                                     <div class="team-member-overlay">
                                         <p>Carol Hevia</p>
                                         <p>Graphic Designer</p>
@@ -564,7 +569,7 @@
                                 <div class="lightbox">
                                     <div class="clearfix">
                                         <div class="column third">
-                                            <img src="http://lorempixel.com/200/200/people/" alt="">
+                                            <div class="team-member-image carol-hevia"></div>
                                         </div>
                                         <div class="column two-thirds">
                                             <h3>
@@ -604,7 +609,7 @@
                             <!-- Team member -->
                             <div class="team-member">
                                 <a href="javascript:void(0)">
-                                    <img src="http://lorempixel.com/200/200/people/" alt="">
+                                    <div class="team-member-image conor-fleming"></div>
                                     <div class="team-member-overlay">
                                         <p>Conor Fleming</p>
                                         <p>Videographer</p>
@@ -614,7 +619,7 @@
                                 <div class="lightbox">
                                     <div class="clearfix">
                                         <div class="column third">
-                                            <img src="http://lorempixel.com/200/200/people/" alt="">
+                                            <div class="team-member-image conor-fleming"></div>
                                         </div>
                                         <div class="column two-thirds">
                                             <h3>
@@ -652,7 +657,7 @@
                             <!-- Team member -->
                             <div class="team-member">
                                 <a href="javascript:void(0)">
-                                    <img src="http://lorempixel.com/200/200/people/" alt="">
+                                    <div class="team-member-image emma-carroll"></div>
                                     <div class="team-member-overlay">
                                         <p>Emma Carroll</p>
                                         <p>Audio Broadcast Producer</p>
@@ -662,7 +667,7 @@
                                 <div class="lightbox">
                                     <div class="clearfix">
                                         <div class="column third">
-                                            <img src="http://lorempixel.com/200/200/people/" alt="">
+                                            <div class="team-member-image emma-carroll"></div>
                                         </div>
                                         <div class="column two-thirds">
                                             <h3>
@@ -700,7 +705,7 @@
                             <!-- Team member -->
                             <div class="team-member">
                                 <a href="javascript:void(0)">
-                                    <img src="http://lorempixel.com/200/200/people/" alt="">
+                                    <div class="team-member-image juliana-scodeler"></div>
                                     <div class="team-member-overlay">
                                         <p>Juliana Scodeler</p>
                                         <p>Photographer</p>
@@ -710,7 +715,7 @@
                                 <div class="lightbox">
                                     <div class="clearfix">
                                         <div class="column third">
-                                            <img src="http://lorempixel.com/200/200/people/" alt="">
+                                            <div class="team-member-image juliana-scodeler"></div>
                                         </div>
                                         <div class="column two-thirds">
                                             <h3>
@@ -745,7 +750,7 @@
                             <!-- Team member -->
                             <div class="team-member">
                                 <a href="javascript:void(0)">
-                                    <img src="http://lorempixel.com/200/200/people/" alt="">
+                                    <div class="team-member-image jaroslaw-narkiewicz"></div>
                                     <div class="team-member-overlay">
                                         <p>Jaroslaw Narkiewicz</p>
                                         <p>Graphic/Web Designer</p>
@@ -755,7 +760,7 @@
                                 <div class="lightbox">
                                     <div class="clearfix">
                                         <div class="column third">
-                                            <img src="http://lorempixel.com/200/200/people/" alt="">
+                                            <div class="team-member-image jaroslaw-narkiewicz"></div>
                                         </div>
                                         <div class="column two-thirds">
                                             <h3>
