--- a/app/Showcase.html
+++ b/app/Showcase.html
@@ -37,13 +37,13 @@
                         <a href="about.html">ABOUT</a>
                     </li>
                     <li>
-                        <a href="#">SERVICES</a>
+                        <a href="services.html">SERVICES</a>
                     </li>
                     <li class="nav-active">
                         <a href="showcase.html">SHOWCASE</a>
                     </li>
                     <li>
-                        <a href="#">CONNECT</a>
+                        <a href="connect.html">CONNECT</a>
                     </li>
                     <li>
                         <a href="/blog">BLOG</a>
