--- a/app/connect.html
+++ b/app/connect.html
@@ -129,6 +129,26 @@
                 </div>
             </form>
         </section>
+
+        <section class="social-media">
+            <div class="clearfix">
+                <div class="column full text-center">
+                    <p>You can also find us here:</p>
+                </div>
+                <div class="column full text-center">
+                    <a href="//www.facebook.com/PlugMedia.net" target="_blank"><i class="fa fa-facebook"></i></a>
+                    <a href="//www.twitter.com/plugmedia_net" target="_blank"><i class="fa fa-twitter"></i></a>
+                    <a href="//plus.google.com/111339119107453629909/posts" target="_blank"><i class="fa fa-google-plus"></i></a>
+                    <a href="//www.linkedin.com/company/1253986" target="_blank"><i class="fa fa-linkedin"></i></a>
+                </div>
+            </div>
+        </section>
+
+        <section class="map">
+            <div class="google-map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2381.948672129954!2d-6.283371999999965!3d53.344174999999986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670c3aa7371b2b%3A0xfcd991cf75874ad2!2splugMEDIA.net!5e0!3m2!1sen!2sie!4v1402496085847" width="1000" height="400" frameborder="0" style="border:0"></iframe>
+            </div>
+        </section>
 		
 
 		<!-- build:js scripts/vendor.js -->
