added images to services section, added footer to index with footerreveal.js, added google map

--- a/app/about.html
+++ b/app/about.html
@@ -67,7 +67,7 @@
         <header class="fixed about-header">
             <!--<img class="header-img"src="images/digitaldepot.jpg" alt=""> -->
         </header>
-        <div class="header-text fixed text-center">
+        <div class="about-header-text fixed text-center">
             <h1>
                 About Us
             </h1>
