--- a/app/connect.html
+++ b/app/connect.html
@@ -64,10 +64,10 @@
         <!-- End navbar -->
 
         <!-- Header -->
-        <header class="fixed services-header">
-            <div class="services-header-bg"></div>
+        <header class="fixed connect-header">
+            <div class="connect-header-bg"></div>
         </header>
-        <div class="services-header-text fixed text-center">
+        <div class="connect-header-text fixed text-center">
             <h1>
                 connect
             </h1>
@@ -144,7 +144,8 @@
             </div>
         </section>
 
-        <section class="map">
+        <section class="map text-center">
+            <p>And here:</p>
             <div class="google-map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2381.948672129954!2d-6.283371999999965!3d53.344174999999986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670c3aa7371b2b%3A0xfcd991cf75874ad2!2splugMEDIA.net!5e0!3m2!1sen!2sie!4v1402496085847" width="1000" height="400" frameborder="0" style="border:0"></iframe>
             </div>
