--- a/app/index.html
+++ b/app/index.html
@@ -226,11 +226,18 @@
                     </div>
                 </div>
             </section>
-            <!--<section class="footer">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, nisi quos in blanditiis sint eligendi beatae repudiandae. Ipsum, perspiciatis, aliquam, ratione quasi illum expedita animi voluptate neque cumque saepe nobis.
-                </p>
-            </section>-->
+            <footer>
+                <div class="clearfix">
+                    <div class="column full">
+                        <div class="column half">
+                            <p>&copy; plugmedia 2014</p>
+                        </div>
+                        <div class="column half flow-opposite">
+                            <p>Website designed &amp; developed by Iain Andrew</p>
+                        </div>
+                    </div>
+                </div>
+            </footer>
         </div>
 
 
