added footer to all pages

--- a/app/Showcase.html
+++ b/app/Showcase.html
@@ -337,6 +337,19 @@
 		</div> <!-- bl-main -->
 		<!-- Work -->
 
+		<footer>
+            <div class="clearfix">
+                <div class="column full">
+                    <div class="column half">
+                        <p>&copy; plugmedia 2014</p>
+                    </div>
+                    <div class="column half flow-opposite">
+                        <p>Website designed &amp; developed by Iain Andrew</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
 		<!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
         <script src="../bower_components/jquery/dist/jquery.js"></script>
