--- a/app/services.html
+++ b/app/services.html
@@ -83,10 +83,17 @@
         <!-- End header -->
 
         <section class="services-blocks">
+            <div class="clearfix block-services-tagline">
+                <div class="column full text-center v-align">
+                    <div class="v-aligned">
+                        <p>Services are awesome!</p>
+                    </div>
+                </div>
+            </div>
             <div class="clearfix block-training">
                 <div class="column full v-align">
                     <div class="title-and-text v-aligned">
-                        <h2 data-center-top="margin-left:0" data-bottom="margin-left:-100%">Learn</h2>
+                        <h2 data-center-top="margin-left:0" data-bottom="margin-left:-100%"><span>/</span>Learn</h2>
                         <p>
                             Get yourself working at your highest capacity through continued development and training. We provide online and class based courses in design, marketing, analysis, cloud computing and new technologies.
                         </p>
@@ -117,7 +124,7 @@
             <div class="clearfix block-design">
                 <div class="column full v-align">
                     <div class="title-and-text v-aligned">
-                        <h2 data-center-top="margin-left:0" data-bottom="margin-left:-100%">Design</h2>
+                        <h2 data-center-top="margin-left:0" data-bottom="margin-left:-100%"><span>/</span>Design</h2>
                         <p>
                             Our first impression of something defines what we think about it. Let our multidisciplinary team create the visual answers to your idea and challenges.
                         </p>
@@ -148,7 +155,7 @@
             <div class="clearfix block-consulting">
                 <div class="column full v-align">
                     <div class="title-and-text v-aligned">
-                        <h2 data-center-top="margin-left:0" data-bottom="margin-left:-100%">Consulting</h2>
+                        <h2 data-center-top="margin-left:0" data-bottom="margin-left:-100%"><span>/</span>Consulting</h2>
                         <p>
                             Helping you see yourself from the outside and advising you on how you can become the way you want.
                         </p>
@@ -176,7 +183,7 @@
             <div class="clearfix block-marketing">
                 <div class="column full v-align">
                     <div class="title-and-text v-aligned">
-                        <h2 data-center-top="margin-left:0" data-bottom="margin-left:-100%">Marketing</h2>
+                        <h2 data-center-top="margin-left:0" data-bottom="margin-left:-100%"><span>/</span>Marketing</h2>
                         <p>
                             Our forte is helping others better understand the needs of their customers and the techniques that will enable them to reach out and grab their attention. 
                         </p>
@@ -204,7 +211,7 @@
             <div class="clearfix block-analysis">
                 <div class="column full v-align">
                     <div class="title-and-text v-aligned">
-                        <h2 data-center-top="margin-left:0" data-bottom="margin-left:-100%">Analysis</h2>
+                        <h2 data-center-top="margin-left:0" data-bottom="margin-left:-100%"><span>/</span>Analysis</h2>
                         <p>
                             Understanding how to make sense of all your online &amp; offline marketing efforts is about compiling the data and reporting on what it means and what to do next.
                         </p>
@@ -244,6 +251,19 @@
                 </div>
             </div>
         </div>
+
+        <footer>
+            <div class="clearfix">
+                <div class="column full">
+                    <div class="column half">
+                        <p>&copy; plugmedia 2014</p>
+                    </div>
+                    <div class="column half flow-opposite">
+                        <p>Website designed &amp; developed by Iain Andrew</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
 		
 
 		<!-- build:js scripts/vendor.js -->
