--- a/app/about.html
+++ b/app/about.html
@@ -814,6 +814,18 @@
                 </div>
             </div>
         </div>
+        <footer>
+            <div class="clearfix">
+                <div class="column full">
+                    <div class="column half">
+                        <p>&copy; plugmedia 2014</p>
+                    </div>
+                    <div class="column half flow-opposite">
+                        <p>Website designed &amp; developed by Iain Andrew</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
 
         <!-- build:js scripts/vendor.js -->
@@ -836,6 +848,7 @@
         </script>
 
         <!-- build:js({app,.tmp}) scripts/main.js -->
+        <script src="scripts/footerreveal.js"></script>
         <script src="scripts/main.js"></script>
         <!-- endbuild -->
 </body>
