--- a/app/connect.html
+++ b/app/connect.html
@@ -147,9 +147,22 @@
         <section class="map text-center">
             <p>And here:</p>
             <div class="google-map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2381.948672129954!2d-6.283371999999965!3d53.344174999999986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670c3aa7371b2b%3A0xfcd991cf75874ad2!2splugMEDIA.net!5e0!3m2!1sen!2sie!4v1402496085847" width="1000" height="400" frameborder="0" style="border:0"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2381.948672129954!2d-6.283371999999965!3d53.344174999999986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670c3aa7371b2b%3A0xfcd991cf75874ad2!2splugMEDIA.net!5e0!3m2!1sen!2sie!4v1402496085847" width="1000" height="400" frameborder="0" style="border:0" scrollwheel=false></iframe>
             </div>
         </section>
+        
+        <footer>
+            <div class="clearfix">
+                <div class="column full">
+                    <div class="column half">
+                        <p>&copy; plugmedia 2014</p>
+                    </div>
+                    <div class="column half flow-opposite">
+                        <p>Website designed &amp; developed by Iain Andrew</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
 		
 
 		<!-- build:js scripts/vendor.js -->
