--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>plugmedia</title>
         <meta name="description" content="">
+        <meta name="robots" content="noodp">
         <meta name="viewport" content="width=device-width">
         <link rel="shortcut icon" href="/favicon.ico">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -226,19 +227,19 @@
                     </div>
                 </div>
             </section>
-            <footer>
-                <div class="clearfix">
-                    <div class="column full">
-                        <div class="column half">
-                            <p>&copy; plugmedia 2014</p>
-                        </div>
-                        <div class="column half flow-opposite">
-                            <p>Website designed &amp; developed by Iain Andrew</p>
-                        </div>
+        </div>
+        <footer>
+            <div class="clearfix">
+                <div class="column full">
+                    <div class="column half">
+                        <p>&copy; plugmedia 2014</p>
+                    </div>
+                    <div class="column half flow-opposite">
+                        <p>Website designed &amp; developed by Iain Andrew</p>
                     </div>
                 </div>
-            </footer>
-        </div>
+            </div>
+        </footer>
 
 
         <!-- build:js scripts/vendor.js -->
