added work blocks and panels, made responsive

--- a/app/index.html
+++ b/app/index.html
@@ -187,7 +187,7 @@
                             <p>
                                 We invest in the development of digital communities and learning programmes that show how technology can be used to improve our lives.
                             </p>
-                            <a href="showcase.html">
+                            <a href="showcase.html#bl-main">
                                 <button>
                                     SHOWCASE
                                 </button>
