--- a/app/connect.html
+++ b/app/connect.html
@@ -106,21 +106,22 @@
                     <input type="text" id="first_name" name="first_name" placeholder="Jonathan" required>
                     <label for="last_name">Last Name</label>
                     <input type="text" id="last_name" name="last_name" placeholder="Doe" required>
+                    <label for="company_name">Company Name</label>
+                    <input type="text" id="company_name" name="company_name" placeholder="JD Enterprises" required>
                     <label for="email">Email Address</label>
                     <input type="text" id="email" name="email" placeholder="jon@doe.com" required>
                 </div>
                 <div class="contact-form-column">
                     <label for="phone">Phone Number</label>
                     <input type="text" id="phone" name="phone" placeholder="087 1234567">
-                    <!--
-                    <label for="country">Country</label>
-                    <select id="country" name="country">
-                        <option>Choose a country</option>
-                        <option>France</option>
-                        <option>Italy</option>
-                        <option>Portugal</option>
+                    <label for="subject">Subject</label>
+                    <select id="subject" name="subject">
+                        <option>Training</option>
+                        <option>Design</option>
+                        <option>Consulting</option>
+                        <option>Marketing</option>
+                        <option>Analysis</option>
                     </select>
-                    -->
                     <label for="message">Message</label>
                     <textarea id="message" name="message" required></textarea>
                 </div>
