added work content, background slider

--- a/app/index.html
+++ b/app/index.html
@@ -187,9 +187,9 @@
                             <p>
                                 We invest in the development of digital communities and learning programmes that show how technology can be used to improve our lives.
                             </p>
-                            <a href="showcase.html#bl-main">
+                            <a href="showcase.html#cs-main">
                                 <button>
-                                    SHOWCASE
+                                    CASE STUDIES
                                 </button>
                             </a>
                         </div>
