--- a/app/connect.html
+++ b/app/connect.html
@@ -99,8 +99,8 @@
         </div>  
         --> 
 
-        <section class="contact">
-            <form class="contact-form">
+        <section class="contact">          
+            <form class="contact-form" method="post" action="connect.php">
                 <div class="contact-form-column">
                     <label for="first_name">First Name</label>
                     <input type="text" id="first_name" name="first_name" placeholder="Jonathan" required>
